[gd_scene load_steps=48 format=3 uid="uid://cv7j61s24qucs"]

[ext_resource type="Texture2D" uid="uid://j33rmysg5k3" path="res://brackeys_platformer_assets/sprites/Boss.png" id="1_6f1an"]
[ext_resource type="Script" path="res://scripts/minion.gd" id="1_8he6h"]
[ext_resource type="Texture2D" uid="uid://c8c1jgbilldul" path="res://brackeys_platformer_assets/sprites/SoliderHorizantalSlash.png" id="2_chmhj"]
[ext_resource type="Texture2D" uid="uid://cwgx00fxnaaxp" path="res://brackeys_platformer_assets/sprites/SoliderVerticalSlash.png" id="3_mjufk"]
[ext_resource type="Texture2D" uid="uid://wjajmqryj4k3" path="res://brackeys_platformer_assets/sprites/SoldierSpriteSheet.png" id="4_8pryo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_skhpx"]
atlas = ExtResource("1_6f1an")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp05v"]
atlas = ExtResource("2_chmhj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqae6"]
atlas = ExtResource("2_chmhj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_snrey"]
atlas = ExtResource("2_chmhj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkckr"]
atlas = ExtResource("2_chmhj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqnl0"]
atlas = ExtResource("2_chmhj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4x5q"]
atlas = ExtResource("2_chmhj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4728"]
atlas = ExtResource("2_chmhj")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0678"]
atlas = ExtResource("2_chmhj")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgehp"]
atlas = ExtResource("2_chmhj")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyoxg"]
atlas = ExtResource("3_mjufk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_krgta"]
atlas = ExtResource("3_mjufk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7pe"]
atlas = ExtResource("3_mjufk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfq4s"]
atlas = ExtResource("3_mjufk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtree"]
atlas = ExtResource("3_mjufk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4idwa"]
atlas = ExtResource("3_mjufk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5kjk"]
atlas = ExtResource("4_8pryo")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0myiy"]
atlas = ExtResource("4_8pryo")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckw1h"]
atlas = ExtResource("4_8pryo")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgsat"]
atlas = ExtResource("4_8pryo")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhihv"]
atlas = ExtResource("4_8pryo")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp1md"]
atlas = ExtResource("4_8pryo")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jogr"]
atlas = ExtResource("4_8pryo")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oixat"]
atlas = ExtResource("4_8pryo")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukhrb"]
atlas = ExtResource("4_8pryo")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiq1f"]
atlas = ExtResource("4_8pryo")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv7oc"]
atlas = ExtResource("4_8pryo")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_so0w7"]
atlas = ExtResource("4_8pryo")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot5uv"]
atlas = ExtResource("4_8pryo")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6mu3"]
atlas = ExtResource("4_8pryo")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k10np"]
atlas = ExtResource("4_8pryo")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwe05"]
atlas = ExtResource("4_8pryo")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4an82"]
atlas = ExtResource("3_mjufk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqb1x"]
atlas = ExtResource("2_chmhj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qclrr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skhpx")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp05v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqae6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snrey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkckr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqnl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4x5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4728")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0678")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgehp")
}],
"loop": false,
"name": &"HorizantalAttack",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyoxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krgta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfq4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtree")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4idwa")
}],
"loop": false,
"name": &"VerticalAttack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5kjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0myiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckw1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgsat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhihv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp1md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jogr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oixat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukhrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiq1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv7oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so0w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot5uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6mu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k10np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwe05")
}],
"loop": false,
"name": &"Walking",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4an82")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqb1x")
}],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4uxpv"]
radius = 3.16228

[sub_resource type="CircleShape2D" id="CircleShape2D_ikwv8"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rdb1s"]
radius = 3.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gnmo"]
radius = 4.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qhwi"]
size = Vector2(17.25, 29.8125)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_myvo8"]
radius = 5.0
height = 424.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1orcw"]
radius = 5.0

[node name="Minion" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_8he6h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_qclrr")
animation = &"HorizantalAttack"

[node name="Hitboxes" type="Node" parent="AnimatedSprite2D"]

[node name="HozintalAttack" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
position = Vector2(0, -15)
collision_layer = 8
collision_mask = 8

[node name="Attack1A" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/HozintalAttack"]
position = Vector2(9, 11)
shape = SubResource("CircleShape2D_4uxpv")
disabled = true
debug_color = Color(0, 0.639216, 0.388235, 0.419608)

[node name="Attack1B" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/HozintalAttack"]
position = Vector2(15, 11)
shape = SubResource("CircleShape2D_4uxpv")
disabled = true
debug_color = Color(8.18223e-07, 0.637649, 0.389301, 0.42)

[node name="Attack1C" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/HozintalAttack"]
position = Vector2(21, 11)
shape = SubResource("CircleShape2D_4uxpv")
disabled = true
debug_color = Color(8.18223e-07, 0.637649, 0.389301, 0.42)

[node name="VericalAttack" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="V_Attack_a" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(12, -14)
shape = SubResource("CircleShape2D_ikwv8")
disabled = true
debug_color = Color(0.879932, 0.314298, 0.337483, 0.42)

[node name="V_Attack_b" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(7, -18)
shape = SubResource("CircleShape2D_rdb1s")
disabled = true
debug_color = Color(0.879932, 0.314298, 0.337483, 0.42)

[node name="V_Attack_c" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(2, -19)
shape = SubResource("CircleShape2D_rdb1s")
disabled = true
debug_color = Color(0.879932, 0.314298, 0.337483, 0.42)

[node name="V_Attack_d" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(-3, -19)
shape = SubResource("CircleShape2D_rdb1s")
disabled = true
debug_color = Color(0.879932, 0.314298, 0.337483, 0.42)

[node name="V_Attack_e" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(-8, -17)
shape = SubResource("CircleShape2D_rdb1s")
disabled = true
debug_color = Color(0.879932, 0.314298, 0.337483, 0.42)

[node name="V_Attack_f" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(-12, -14)
shape = SubResource("CircleShape2D_rdb1s")
disabled = true
debug_color = Color(0.879932, 0.314298, 0.337483, 0.42)

[node name="hDetect" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="hAttackCollisiona" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/hDetect"]
position = Vector2(15, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4gnmo")

[node name="vDetect" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="vAttackCollision" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/vDetect"]
position = Vector2(0, -39.0938)
shape = SubResource("RectangleShape2D_2qhwi")

[node name="Seeing" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/Seeing"]
position = Vector2(0, -4)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_myvo8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_1orcw")

[node name="Raycast" type="Node" parent="."]

[node name="Right" type="RayCast2D" parent="Raycast"]
position = Vector2(29, -5)
target_position = Vector2(0, 11)
collision_mask = 10

[node name="Left" type="RayCast2D" parent="Raycast"]
position = Vector2(-19, -4)
target_position = Vector2(0, 11)
collision_mask = 10

[node name="Timers" type="Node" parent="."]

[node name="canAttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/HozintalAttack" to="." method="_on_hozintal_attack_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/VericalAttack" to="." method="_on_verical_attack_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/hDetect" to="." method="_on_h_detect_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/vDetect" to="." method="_on_v_detect_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/Seeing" to="." method="_on_seeing_body_entered"]
[connection signal="timeout" from="Timers/canAttackTimer" to="." method="_on_can_attack_timer_timeout"]
